fix: 개선된 문법 적용, 불필요한 파일 제거 (#97)